# le_fish_game

./: .gitignore  Cargo.toml  Config.toml  build.sh
aqua/: block.aqua  config.aqua  dht.aqua  ed25519.aqua  fdb.aqua  fevm_rpc.aqua  game.aqua  ipfs_dag.aqua  lefish.aqua  oracle.aqua  package-lock.json  package.json
artifacts/: config_file.wasm  game.wasm  lefish_game.wasm  lefish_sqlite.wasm  tx_sign.wasm
config/: Cargo.toml
config/src/: config.rs  main.rs
game/: Cargo.toml
game/src/: main.rs  metadata.rs
scripts/: deploy.sh  run.sh
sqlite/: Cargo.toml
sqlite/src/: config.rs
tx_sign/: Cargo.toml
tx_sign/src/: main.rs
types/: Cargo.toml
types/src/: lib.rs  result.rs
